// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AddToFavoriteButton rendering tests AddToFavoriteButton - variant card - test 1`] = `
<div>
  <button
    aria-label="Zu Favoriten hinzufügen"
    aria-pressed="false"
    class="absolute top-3 right-3 z-10 rounded-full bg-white/80 p-2 shadow-sm transition-all hover:bg-white"
    data-testid="toggle-favorite-btn"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-star h-4 w-4 transition-colors text-slate-400 hover:text-yellow-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
      />
    </svg>
  </button>
</div>
`;

exports[`AddToFavoriteButton rendering tests AddToFavoriteButton - variant inline - isFavorite false - hideInactive false - test 1`] = `
<div>
  <button
    aria-label="Zu Favoriten hinzufügen"
    aria-pressed="false"
    class="rounded-full p-1.5 transition-all hover:bg-slate-100"
    data-testid="toggle-favorite-btn"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-star h-4 w-4 transition-colors text-slate-400 hover:text-yellow-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
      />
    </svg>
  </button>
</div>
`;

exports[`AddToFavoriteButton rendering tests AddToFavoriteButton - variant inline - isFavorite false - hideInactive true - test 1`] = `
<div>
  <button
    aria-label="Zu Favoriten hinzufügen"
    aria-pressed="false"
    class="rounded-full p-1.5 transition-all hover:bg-slate-100 opacity-0 group-hover:opacity-100 focus-visible:opacity-100 group-focus-within:opacity-100 [.group:has(button[data-state=open])_&]:opacity-100"
    data-testid="toggle-favorite-btn"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-star h-4 w-4 transition-colors text-slate-400 hover:text-yellow-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
      />
    </svg>
  </button>
</div>
`;

exports[`AddToFavoriteButton rendering tests AddToFavoriteButton - variant inline - isFavorite true - test 1`] = `
<div>
  <button
    aria-label="Aus Favoriten entfernen"
    aria-pressed="true"
    class="rounded-full p-1.5 transition-all hover:bg-slate-100"
    data-testid="toggle-favorite-btn"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-star h-4 w-4 transition-colors fill-yellow-400 text-yellow-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
      />
    </svg>
  </button>
</div>
`;
